Properly remove files from cache with undo/redo

- ensure that cache files are cleared for redo actions when a new action is appended
- use only Qt code for file operations, removing C headers
- code reuse

BUG: 268925